Trying again to stop menu wrapping

--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ h2 {
 
 nav a {
     display: inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 8px;
+    margin-right: 8px;
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
